addons/viewer/manifests/ingress-traefik/viewer-ingress-traefik.yaml
# SPDX-FileCopyrightText: © 2025 Siemens Healthcare GmbH
#
# SPDX-License-Identifier: MIT

# this ingress will be merged with ingress provided in:
# addons/ingress/traefik/manifests/cluster-local-ingress.yaml
# and exposes the kubernetes-viewer angular application on:
# http://k2s.cluster.local/viewer/
# The certificate is taken from k8s secret 'k2s.cluster.local-tls'
# (see addons/ingress/traefik/manifests/cluster-local-ingress.yaml)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: viewer-traefik-cluster-local
  namespace: viewer

spec:
  ingressClassName: traefik
  rules:
    - host: k2s.cluster.local
      http:
        paths:
          - path: /viewer
            pathType: Prefix
            backend:
              service:
                name: viewerwebapp
                port:
                  number: 80
